--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1 id="home-heading">Welcome Home</h1>
+    <h1 id="home-heading">Welcome to the Nature Site </h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -31,3 +31,4 @@
   </footer>
 </body>
 </html>
+
