--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Welcome to our homepage">
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Welcome to our homepage" />
+  <link rel="stylesheet" href="styles.css" />
   <script src="script.js" defer></script>
   <title>Home</title>
 </head>
 <body>
   <header>
-    <h1 id="home-heading">Welcome to the Nature Site </h1>
+    <h1 id="home-heading">Welcome to the Nature Site</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -20,15 +20,24 @@
       </ul>
     </nav>
   </header>
+
+  <!-- Top Half: Fullscreen Background Image -->
+  <section class="hero-banner">
+    <div class="hero-text">
+      <h2>Explore the Wild</h2>
+      <p>Immerse yourself in natural beauty and tranquility</p>
+    </div>
+  </section>
+
+  <!-- Bottom Half: Original Content -->
   <section>
     <article>
-      <img src="https://images.unsplash.com/photo-1433086966358-54859d0ed716?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Home Image" class="responsive-img">
       <p>This is the home page of our awesome responsive website!</p>
     </article>
   </section>
+
   <footer>
     <p>&copy; 2025 Responsive Web Project</p>
   </footer>
 </body>
 </html>
-
