--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Welcome to our homepage" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
   <title>Home</title>
 </head>
 <body>
   <header>
-    <h1 id="home-heading">Welcome to the Nature Site</h1>
+    <h1 id="home-heading">Welcome Home</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,15 +21,11 @@
     </nav>
   </header>
 
-  <!-- Top Half: Fullscreen Background Image -->
-  <section class="hero-banner">
-    <div class="hero-text">
-      <h2>Explore the Wild</h2>
-      <p>Immerse yourself in natural beauty and tranquility</p>
-    </div>
+  <section class="hero-banner" style="background-image: url('https://images.unsplash.com/photo-1433086966358-54859d0ed716?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+    <h2>Explore the Wild</h2>
+    <p>Immerse yourself in natural beauty and tranquility</p>
   </section>
 
-  <!-- Bottom Half: Original Content -->
   <section>
     <article>
       <p>This is the home page of our awesome responsive website!</p>
