--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Our gallery of images">
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Gallery" />
+  <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
   <title>Gallery</title>
 </head>
@@ -21,13 +21,13 @@
     </nav>
   </header>
 
+  <section class="hero-banner" style="background-image: url('https://images.unsplash.com/photo-1742626157100-a25483dda2ea?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+    <h2>Our Gallery</h2>
+    <p>A visual journey through our world</p>
+  </section>
+
   <section>
     <article>
-      <img
-        src="https://images.unsplash.com/photo-1742626157100-a25483dda2ea?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-        alt="Gallery Image"
-        class="responsive-img"
-      >
       <p>Explore our collection of curated visuals.</p>
     </article>
   </section>
