--- a/communication.html
+++ b/communication.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Get in touch with us">
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Contact us" />
+  <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
   <title>Communication</title>
 </head>
@@ -21,13 +21,13 @@
     </nav>
   </header>
 
+  <section class="hero-banner" style="background-image: url('https://images.unsplash.com/photo-1567473030492-533b30c5494c?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+    <h2>Get in Touch</h2>
+    <p>We’d love to hear from you</p>
+  </section>
+
   <section>
     <article>
-      <img
-        src="https://images.unsplash.com/photo-1567473030492-533b30c5494c?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-        alt="Communication Image"
-        class="responsive-img"
-      >
       <p>We value communication — reach out and connect with us!</p>
     </article>
   </section>
