--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 <body>
   <header>
-    <h1 id="home-heading">Welcome to the Nature Site</h1>
+    <!-- Nonprofit Name and Tagline -->
+    <div class="branding">
+      <h1 class="brand-name">🌿 Horizon Hope Foundation</h1>
+      <p class="tagline">Empowering communities. Inspiring change.</p>
+    </div>
+
+    <!-- Navigation -->
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,11 +27,13 @@
     </nav>
   </header>
 
+  <!-- Hero Image -->
   <section class="hero-banner" style="background-image: url('https://images.unsplash.com/photo-1433086966358-54859d0ed716?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
     <h2>Explore the Wild</h2>
     <p>Immerse yourself in natural beauty and tranquility</p>
   </section>
 
+  <!-- Main Section -->
   <section>
     <article>
       <p>This is the home page of our awesome responsive website!</p>
