--- a/about.html
+++ b/about.html
@@ -24,42 +24,5 @@
     </nav>
   </header>
 
-  <!-- Hero Banner -->
-  <section class="hero-banner" style="background-image: url('https://images.unsplash.com/photo-1600880292089-90a7e086ee0c?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-    <h2>About Us</h2>
-    <p>Building a better tomorrow—together</p>
-  </section>
-
-  <!-- Main About Content -->
-  <section>
-    <article>
-      <h3>Who We Are</h3>
-      <p>
-        Horizon Hope Foundation is a nonprofit organization dedicated to uplifting underserved communities through outreach, education, and empowerment. We believe that real change starts with compassion, action, and opportunity.
-      </p>
-
-      <h3>Our Mission</h3>
-      <p>
-        To inspire and empower individuals by providing resources, programs, and support that help create sustainable, thriving communities.
-      </p>
-
-      <h3>What We Do</h3>
-      <ul>
-        <li>🏫 Educational workshops and mentorship</li>
-        <li>🍎 Community food and clothing drives</li>
-        <li>🌿 Environmental awareness and clean-up projects</li>
-        <li>🤝 Youth empowerment and leadership initiatives</li>
-      </ul>
-
-      <h3>Why We Do It</h3>
-      <p>
-        Because everyone deserves hope, a helping hand, and the opportunity to succeed. Together, we can make a lasting impact where it's needed most.
-      </p>
-    </article>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Horizon Hope Foundation — All Rights Reserved</p>
-  </footer>
-</body>
-</html>
+  <!-- Hero Banner with description at bottom -->
+  <section class="hero-banner with-description" style="background-image: url('https://images.unsplash.com/photo-1600880292089-90a7e086ee0c?q=80&w=3087&auto=format&fit=crop&ixlib=rb
