--- a/index.html
+++ b/index.html
@@ -3,20 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Welcome to Horizon Hope Foundation" />
+  <meta name="description" content="Welcome to our homepage" />
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
-  <title>Home | Horizon Hope Foundation</title>
+  <title>Home</title>
 </head>
 <body>
   <header>
-    <!-- Nonprofit Branding -->
-    <div class="branding">
-      <h1 class="brand-name">🌿 Horizon Hope Foundation</h1>
-      <p class="tagline">Empowering communities. Inspiring change.</p>
-    </div>
-
-    <!-- Navigation Menu -->
+    <h1 id="home-heading">Welcome to the Nature Site</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -27,22 +21,21 @@
     </nav>
   </header>
 
-  <!-- Top Hero Section -->
   <section class="hero-banner" style="background-image: url('https://images.unsplash.com/photo-1433086966358-54859d0ed716?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
     <h2>Explore the Wild</h2>
     <p>Immerse yourself in natural beauty and tranquility</p>
   </section>
 
-  <!-- Main Content Section -->
   <section>
     <article>
       <p>This is the home page of our awesome responsive website!</p>
     </article>
   </section>
 
-  <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Horizon Hope Foundation — All Rights Reserved</p>
+    <p>&copy; 2025 Responsive Web Project</p>
   </footer>
 </body>
 </html>
+
+
