--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1 id="home-heading">Welcome to the Nature Site</h1>
+    <h1 id="home-heading">Welcome Home</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,20 +21,17 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
   <section class="hero-banner" style="background-image: url('https://images.unsplash.com/photo-1433086966358-54859d0ed716?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
     <h2>Explore the Wild</h2>
     <p>Immerse yourself in natural beauty and tranquility</p>
   </section>
 
-  <!-- Main Content -->
   <section>
     <article>
       <p>This is the home page of our awesome responsive website!</p>
     </article>
   </section>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Responsive Web Project</p>
   </footer>
