--- a/about.html
+++ b/about.html
@@ -3,17 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="About Horizon Hope Foundation" />
+  <meta name="description" content="About our site" />
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
   <title>About</title>
 </head>
 <body>
   <header>
-    <div class="branding">
-      <h1 class="brand-name">🌿 Horizon Hope Foundation</h1>
-      <p class="tagline">Empowering communities. Inspiring change.</p>
-    </div>
+    <h1>About Us</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -24,5 +21,19 @@
     </nav>
   </header>
 
-  <!-- Hero Banner with description at bottom -->
-  <section class="hero-banner with-description" style="background-image: url('https://images.unsplash.com/photo-1600880292089-90a7e086ee0c?q=80&w=3087&auto=format&fit=crop&ixlib=rb
+  <section class="hero-banner" style="background-image: url('https://images.unsplash.com/photo-1600880292089-90a7e086ee0c?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+    <h2>About Us</h2>
+    <p>Who we are & why it matters</p>
+  </section>
+
+  <section>
+    <article>
+      <p>Learn more about who we are and what we do.</p>
+    </article>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Responsive Web Project</p>
+  </footer>
+</body>
+</html>
